--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -640,7 +640,7 @@ $entry_inner_shadow: inset 0 1px transparentize(black, 0.98), inset 0 2px transp
         > tab {
           &:hover { box-shadow: $bh; }
           &:checked, &:checked:hover {
-            background-color: $base_color;
+            background-color: $secondary_bg_color;
             border-width: 0;
             box-shadow: $ba;
           }
