--- a/gtk-3.0/_other.scss
+++ b/gtk-3.0/_other.scss
@@ -182,7 +182,7 @@ window.background.chromium {
 .thunar {
   .standard-view { border-width: 0; }
   .sidebar .view {
-    background-color: mix($bg_color, $base_color, 50%);
+    background-color: $secondary_bg_color;
     &:selected {
       background-color: $selected_bg_color;
       &:backdrop { background-color: transparentize($selected_bg_color, 0.4); }
