--- a/gnome-shell/gnome-shell-sass/_common.scss
+++ b/gnome-shell/gnome-shell-sass/_common.scss
@@ -1405,7 +1405,8 @@ StScrollBar {
   }
 
   .app-well-app-running-dot { //running apps indicator
-    width: 10px; height: 3px;
+    width: 10px;
+    height: 3px;
     background-color: $selected_bg_color;
     margin-bottom: 2px;
   }
