--- a/gnome-shell/gnome-shell-high-contrast.css
+++ b/gnome-shell/gnome-shell-high-contrast.css
@@ -990,7 +990,9 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #LookingGlassPropertyInspector { background: rgba(0, 0, 0, 0.8); border: 2px solid grey; border-radius: 0; padding: 6px; }
 
-#panel.dashtopanelMainPanel, #panel.dashtopanelMainPanel.dashtopanelBottom .app-well-app:hover .overview-icon, #panel.dashtopanelMainPanel.dashtopanelTop .app-well-app:hover .overview-icon, #dashtodockContainer.left #dash .app-well-app:hover, #dashtodockContainer.right #dash .app-well-app:hover, #dashtodockContainer.bottom #dash .app-well-app:hover, #dashtodockContainer.top #dash .app-well-app:hover { background-gradient-direction: vertical; background-gradient-start: transparent; background-gradient-end: transparent; }
+#panel.dashtopanelMainPanel.dashtopanelBottom .app-well-app:hover .overview-icon, #panel.dashtopanelMainPanel.dashtopanelTop .app-well-app:hover .overview-icon, #dashtodockContainer.left #dash .app-well-app.focused, #dashtodockContainer.left #dash .app-well-app:hover, #dashtodockContainer.right #dash .app-well-app.focused, #dashtodockContainer.right #dash .app-well-app:hover, #dashtodockContainer.bottom #dash .app-well-app.focused, #dashtodockContainer.bottom #dash .app-well-app:hover, #dashtodockContainer.top #dash .app-well-app.focused, #dashtodockContainer.top #dash .app-well-app:hover { background-gradient-direction: vertical; background-gradient-start: transparent; background-gradient-end: transparent; }
+
+#panel.dashtopanelMainPanel { background-gradient-direction: vertical; background-gradient-start: rgba(0, 0, 0, 0.5); background-gradient-end: rgba(0, 0, 0, 0.5); }
 
 #panel.dashtopanelMainPanel.dashtopanelBottom { box-shadow: inset 0 -3px rgba(0, 0, 0, 0.4); }
 
@@ -1008,31 +1010,25 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #panel.dashtopanelMainPanel .dash-item-container > * { padding: 0 4px; }
 
-#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; background-color: transparent; border: none; color: transparent; }
+#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; border: none; color: transparent; border-radius: 0; margin: 0; }
 
-#panel.dashtopanelMainPanel .show-apps:hover .overview-icon { background-image: url("d2p-activities-active.svg"); background-position: center top; }
+#panel.dashtopanelMainPanel .show-apps:hover .overview-icon { background-image: url("d2p-activities-active.svg"); background-color: rgba(0, 0, 0, 0.5); background-position: center top; color: transparent; }
 
-#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; background-color: transparent; border: none; color: transparent; }
+#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; border: none; color: transparent; border-radius: 0; margin: 0; }
 
-#panel.dashtopanelMainPanel .show-apps:checked .overview-icon { background-image: url("d2p-activities-active.svg"); background-position: center top; }
+#panel.dashtopanelMainPanel .show-apps:focus .overview-icon { background-image: url("d2p-activities-active.svg"); background-color: rgba(0, 0, 0, 0.5); background-position: center top; color: transparent; }
 
-#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; background-color: transparent; border: none; color: transparent; }
+#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; border: none; color: transparent; border-radius: 0; margin: 0; }
 
-#panel.dashtopanelMainPanel .show-apps:overview .overview-icon { background-image: url("d2p-activities-active.svg"); background-position: center top; }
+#panel.dashtopanelMainPanel .show-apps:active .overview-icon { background-image: url("d2p-activities-active.svg"); background-color: rgba(0, 0, 0, 0.5); background-position: center top; color: transparent; }
 
-#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; background-color: transparent; border: none; color: transparent; }
+#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; border: none; color: transparent; border-radius: 0; margin: 0; }
 
-#panel.dashtopanelMainPanel .show-apps:focus .overview-icon { background-image: url("d2p-activities-active.svg"); background-position: center top; }
+#panel.dashtopanelMainPanel .show-apps:overview .overview-icon { background-image: url("d2p-activities-active.svg"); background-color: rgba(0, 0, 0, 0.5); background-position: center top; color: transparent; }
 
-#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; background-color: transparent; border: none; color: transparent; }
+#panel.dashtopanelMainPanel > #panelRight { box-shadow: inset 1px 0 rgba(0, 0, 0, 0.5); background-color: rgba(0, 0, 0, 0.5); }
 
-#panel.dashtopanelMainPanel .show-apps:active .overview-icon { background-image: url("d2p-activities-active.svg"); background-position: center top; }
-
-#panel.dashtopanelMainPanel .show-apps .overview-icon { background-image: url("d2p-activities.svg"); background-position: center top; background-color: transparent; border: none; color: transparent; }
-
-#panel.dashtopanelMainPanel .show-apps:selected .overview-icon { background-image: url("d2p-activities-active.svg"); background-position: center top; }
-
-#panel.dashtopanelMainPanel > #panelRight { background-color: rgba(0, 0, 0, 0.7); border-radius: 2px; margin: 6px; }
+#panel.dashtopanelMainPanel > #panelRight .panel-button:hover { box-shadow: none; }
 
 #panel.dashtopanelMainPanel .showdesktop-button { padding-right: 8px; }
 
@@ -1053,6 +1049,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 #dashtodockContainer.shrink .dash-item-container > StButton, #dashtodockContainer.dashtodock .dash-item-container > StButton { padding: 2px 4px !important; }
 
 #dashtodockContainer.left #dash .app-well-app { padding: 0; border: none; }
+
+#dashtodockContainer.left #dash .app-well-app.focused { box-shadow: inset 3px 0 rgba(255, 255, 255, 0.6); }
 
 #dashtodockContainer.left #dash .app-well-app:hover { box-shadow: inset 3px 0 rgba(255, 255, 255, 0.6); }
 
@@ -1078,6 +1076,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.right #dash .app-well-app { padding: 0; border: none; }
 
+#dashtodockContainer.right #dash .app-well-app.focused { box-shadow: inset 3px 0 rgba(255, 255, 255, 0.6); }
+
 #dashtodockContainer.right #dash .app-well-app:hover { box-shadow: inset -3px 0 rgba(255, 255, 255, 0.6); }
 
 #dashtodockContainer.right #dash .app-well-app:hover .overview-icon { background: none; }
@@ -1102,6 +1102,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.bottom #dash .app-well-app { padding: 0; border: none; }
 
+#dashtodockContainer.bottom #dash .app-well-app.focused { box-shadow: inset 3px 0 rgba(255, 255, 255, 0.6); }
+
 #dashtodockContainer.bottom #dash .app-well-app:hover { box-shadow: inset 0 -3px rgba(255, 255, 255, 0.6); }
 
 #dashtodockContainer.bottom #dash .app-well-app:hover .overview-icon { background: none; }
@@ -1125,6 +1127,8 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 #dashtodockContainer.shrink .dash-item-container > StButton, #dashtodockContainer.dashtodock .dash-item-container > StButton { padding: 2px 4px !important; }
 
 #dashtodockContainer.top #dash .app-well-app { padding: 0; border: none; }
+
+#dashtodockContainer.top #dash .app-well-app.focused { box-shadow: inset 3px 0 rgba(255, 255, 255, 0.6); }
 
 #dashtodockContainer.top #dash .app-well-app:hover { box-shadow: inset 0 3px rgba(255, 255, 255, 0.6); }
 
