--- a/gtk-3.0/_variables.scss
+++ b/gtk-3.0/_variables.scss
@@ -4,14 +4,15 @@ $br_w: 2px; // Rounded corners on decorations
 $circular_radius: 99px;
 
 // duration
+$shorter_duration: 150ms;
 $longer_duration: 250ms;
 
 // timing function
 $deceleration_curve: cubic-bezier(0.0, 0.0, 0.2, 1);
 
 // button shadows
-$shadow_normal: 0 1px 2px transparentize(black, 0.78), 0 1px 1px transparentize(black, 0.94);
-$shadow_hover: 0 1px 2px transparentize(black, 0.75), 0 2px 3px transparentize(black, 0.78);
+$shadow_normal: 0 1px 2px transparentize(black, 0.7), 0 1px 1px transparentize(black, 0.84);
+$shadow_hover: 0 1px 2px transparentize(black, 0.65), 0 2px 3px transparentize(black, 0.75);
 $shadow_active: inset 0 0 0 1px transparentize(black, 0.92), inset 0 2px transparentize(black, 0.96);
 $shadow_focus: 0 1px 2px transparentize(black, 0.75),
                0 2px 3px transparentize(black, 0.78),
