--- a/gnome-shell/gnome-shell-sass/_extensions.scss
+++ b/gnome-shell/gnome-shell-sass/_extensions.scss
@@ -4,11 +4,18 @@ $_hover_effect_bottom: inset 0 -3px $_hover_color;
 $_hover_effect_left: inset 3px 0 $_hover_color;
 $_hover_effect_right: inset -3px 0 $_hover_color;
 
+$_selected_top: inset 0 3px $selected_bg_color;
+$_selected_bottom: inset 0 -3px $selected_bg_color;
+$_selected_left: inset 3px 0 $selected_bg_color;
+$_selected_right: inset -3px 0 $selected_bg_color;
+
 $_panel_shade: transparentize(black,0.6);
 $_panel_top: inset 0 3px $_panel_shade;
 $_panel_bottom: inset 0 -3px $_panel_shade;
 $_panel_left: inset 3px 0 $_panel_shade;
 $_panel_right: inset -3px 0 $_panel_shade;
+
+$panel_color: transparentize(black, 0.5);
 
 // Trick due to St limitations. It needs a background to draw a box-shadow
 %panel_fix {
@@ -19,8 +26,8 @@ $_panel_right: inset -3px 0 $_panel_shade;
 
 %panel_bg {
   background-gradient-direction: vertical;
-  background-gradient-start: transparentize(black, 0.5);
-  background-gradient-end: transparentize(black, 0.5);
+  background-gradient-start: $panel_color;
+  background-gradient-end: $panel_color;
 }
 
 // Dash to Panel extension styling
@@ -69,7 +76,7 @@ $_panel_right: inset -3px 0 $_panel_shade;
     // FIXME: The icon in the overview is still showing
     .show-apps:#{$d} .overview-icon {
       background-image: url("d2p-activities-active.svg");
-      background-color: transparentize(black, 0.5);
+      background-color: $panel_color;
       background-position: center top;
       color: transparent;
     }
@@ -77,8 +84,8 @@ $_panel_right: inset -3px 0 $_panel_shade;
 
   // clock and system menu area
   & > #panelRight {
-    box-shadow: inset 1px 0 transparentize(black, 0.5);
-    background-color: transparentize(black, 0.5);
+    box-shadow: inset 1px 0 $panel_color;
+    background-color: $panel_color;
     .panel-button:hover { box-shadow: none; }
   }
   
@@ -89,7 +96,7 @@ $_panel_right: inset -3px 0 $_panel_shade;
 
 @each $p in (left), (right), (bottom), (top) {
   #dashtodockContainer {
-    background-color: transparentize(black, 0.5);
+    background-color: $panel_color;
     border-radius: 0;
 
     &.#{$p}.extended {
@@ -134,10 +141,29 @@ $_panel_right: inset -3px 0 $_panel_shade;
     .app-well-app {
       padding: 0;
       border: none;
-      
+
+      & .overview-icon { margin: 0; }
+
+      &.focused .overview-icon {
+        //box-shadow: inset 0 0 0 1px transparentize(white, 0.9);
+        
+        // FIXME: The background on this one is a stubborn one
+        background-gradient-direction: horizontal;
+        background-gradient-start: transparent;
+        background-gradient-end: transparent;
+        background: none;
+      }
+
+      &:hover .overview-icon {
+        background: none;
+      }
+
       &.focused {
-        box-shadow: $_hover_effect_left;
         @extend %panel_fix;
+        @if $p==left { box-shadow: $_selected_left; }
+        @else if $p==right { box-shadow: $_selected_right; }
+        @else if $p==bottom { box-shadow: $_selected_bottom; }
+        @else if $p==top { box-shadow: $_selected_top; }
       }
 
       &:hover {
@@ -147,12 +173,12 @@ $_panel_right: inset -3px 0 $_panel_shade;
         @else if $p==bottom { box-shadow: $_hover_effect_bottom; }
         @else if $p==top { box-shadow: $_hover_effect_top; }
       }
-      &:hover .overview-icon { background: none; }
 
       &:active .overview-icon,
       &:checked .overview-icon,
       &:focus .overview-icon,
       &:selected .overview-icon {
+        @extend %panel_fix;
         background: none;
         box-shadow: none;
       }
