--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -990,17 +990,17 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #LookingGlassPropertyInspector { background: rgba(0, 0, 0, 0.8); border: 2px solid grey; border-radius: 0; padding: 6px; }
 
-#panel.dashtopanelMainPanel.dashtopanelBottom .app-well-app:hover .overview-icon, #panel.dashtopanelMainPanel.dashtopanelTop .app-well-app:hover .overview-icon, #dashtodockContainer.left #dash .app-well-app.focused, #dashtodockContainer.left #dash .app-well-app:hover, #dashtodockContainer.left #dash .app-well-app:active .overview-icon, #dashtodockContainer.left #dash .app-well-app:checked .overview-icon, #dashtodockContainer.left #dash .app-well-app:focus .overview-icon, #dashtodockContainer.left #dash .app-well-app:selected .overview-icon, #dashtodockContainer.right #dash .app-well-app.focused, #dashtodockContainer.right #dash .app-well-app:hover, #dashtodockContainer.right #dash .app-well-app:active .overview-icon, #dashtodockContainer.right #dash .app-well-app:checked .overview-icon, #dashtodockContainer.right #dash .app-well-app:focus .overview-icon, #dashtodockContainer.right #dash .app-well-app:selected .overview-icon, #dashtodockContainer.bottom #dash .app-well-app.focused, #dashtodockContainer.bottom #dash .app-well-app:hover, #dashtodockContainer.bottom #dash .app-well-app:active .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:checked .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:focus .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:selected .overview-icon, #dashtodockContainer.top #dash .app-well-app.focused, #dashtodockContainer.top #dash .app-well-app:hover, #dashtodockContainer.top #dash .app-well-app:active .overview-icon, #dashtodockContainer.top #dash .app-well-app:checked .overview-icon, #dashtodockContainer.top #dash .app-well-app:focus .overview-icon, #dashtodockContainer.top #dash .app-well-app:selected .overview-icon { background-gradient-direction: vertical; background-gradient-start: transparent; background-gradient-end: transparent; }
+#panel.dashtopanelMainPanel.dashtopanelBottom .app-well-app:hover .overview-icon, #panel.dashtopanelMainPanel.dashtopanelTop .app-well-app:hover .overview-icon, #dashtodockContainer.left #dash .running1, #dashtodockContainer.left #dash .app-well-app.focused, #dashtodockContainer.left #dash .app-well-app:hover, #dashtodockContainer.left #dash .app-well-app:active .overview-icon, #dashtodockContainer.left #dash .app-well-app:checked .overview-icon, #dashtodockContainer.left #dash .app-well-app:focus .overview-icon, #dashtodockContainer.left #dash .app-well-app:selected .overview-icon, #dashtodockContainer.right #dash .running1, #dashtodockContainer.right #dash .app-well-app.focused, #dashtodockContainer.right #dash .app-well-app:hover, #dashtodockContainer.right #dash .app-well-app:active .overview-icon, #dashtodockContainer.right #dash .app-well-app:checked .overview-icon, #dashtodockContainer.right #dash .app-well-app:focus .overview-icon, #dashtodockContainer.right #dash .app-well-app:selected .overview-icon, #dashtodockContainer.bottom #dash .running1, #dashtodockContainer.bottom #dash .app-well-app.focused, #dashtodockContainer.bottom #dash .app-well-app:hover, #dashtodockContainer.bottom #dash .app-well-app:active .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:checked .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:focus .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:selected .overview-icon, #dashtodockContainer.top #dash .running1, #dashtodockContainer.top #dash .app-well-app.focused, #dashtodockContainer.top #dash .app-well-app:hover, #dashtodockContainer.top #dash .app-well-app:active .overview-icon, #dashtodockContainer.top #dash .app-well-app:checked .overview-icon, #dashtodockContainer.top #dash .app-well-app:focus .overview-icon, #dashtodockContainer.top #dash .app-well-app:selected .overview-icon { background-gradient-direction: vertical; background-gradient-start: transparent; background-gradient-end: transparent; }
 
 #panel.dashtopanelMainPanel { background-gradient-direction: vertical; background-gradient-start: rgba(0, 0, 0, 0.5); background-gradient-end: rgba(0, 0, 0, 0.5); }
 
 #panel.dashtopanelMainPanel.dashtopanelBottom { box-shadow: inset 0 -3px rgba(0, 0, 0, 0.4); }
 
-#panel.dashtopanelMainPanel.dashtopanelBottom .app-well-app:hover .overview-icon { box-shadow: inset 0 -3px rgba(255, 255, 255, 0.6); }
+#panel.dashtopanelMainPanel.dashtopanelBottom .app-well-app:hover .overview-icon { box-shadow: inset 0 -3px rgba(255, 255, 255, 0.8); }
 
 #panel.dashtopanelMainPanel.dashtopanelTop { box-shadow: inset 0 3px rgba(0, 0, 0, 0.4); }
 
-#panel.dashtopanelMainPanel.dashtopanelTop .app-well-app:hover .overview-icon { box-shadow: inset 0 3px rgba(255, 255, 255, 0.6); }
+#panel.dashtopanelMainPanel.dashtopanelTop .app-well-app:hover .overview-icon { box-shadow: inset 0 3px rgba(255, 255, 255, 0.8); }
 
 #panel.dashtopanelMainPanel .panel-button { text-shadow: black 0 1px 1px; }
 
@@ -1040,15 +1040,19 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.extended { border: 0; border-radius: 0; }
 
-#dashtodockContainer.bottom #dash .app-well-app-running-dot { width: 44px; height: 2px; margin-bottom: 0; }
+#dashtodockContainer.bottom #dash .app-well-app-running-dot { width: 44px; height: 3px; margin-bottom: 0; }
 
-#dashtodockContainer #dash .app-well-app-running-dot { background-color: white; }
+#dashtodockContainer #dash .app-well-app-running-dot { background-color: transparent; }
 
 #dashtodockContainer.running-dots .dash-item-container > StButton, #dashtodockContainer.dashtodock .dash-item-container > StButton { background-size: contain; }
 
 #dashtodockContainer.shrink .dash-item-container > StButton, #dashtodockContainer.dashtodock .dash-item-container > StButton { padding: 2px 4px !important; }
 
-#dashtodockContainer.left #dash .app-well-app { padding: 0; border: none; }
+#dashtodockContainer.left #dash .running1 { box-shadow: inset 3px 0 rgba(255, 255, 255, 0.6); }
+
+#dashtodockContainer.left #dash .running1:hover { box-shadow: inset 3px 0 rgba(255, 255, 255, 0.8); }
+
+#dashtodockContainer.left #dash .app-well-app { padding: 0px; border: 2px solid transparent; border-left: 0; border-right: 0; }
 
 #dashtodockContainer.left #dash .app-well-app .overview-icon { margin: 0; }
 
@@ -1058,7 +1062,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.left #dash .app-well-app.focused { box-shadow: inset 3px 0 #fb6f55; }
 
-#dashtodockContainer.left #dash .app-well-app:hover { box-shadow: inset 3px 0 rgba(255, 255, 255, 0.6); }
+#dashtodockContainer.left #dash .app-well-app:hover { box-shadow: inset 3px 0 rgba(255, 255, 255, 0.8); }
 
 #dashtodockContainer.left #dash .app-well-app:active .overview-icon, #dashtodockContainer.left #dash .app-well-app:checked .overview-icon, #dashtodockContainer.left #dash .app-well-app:focus .overview-icon, #dashtodockContainer.left #dash .app-well-app:selected .overview-icon { background: none; box-shadow: none; }
 
@@ -1070,15 +1074,19 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.extended { border: 0; border-radius: 0; }
 
-#dashtodockContainer.bottom #dash .app-well-app-running-dot { width: 44px; height: 2px; margin-bottom: 0; }
+#dashtodockContainer.bottom #dash .app-well-app-running-dot { width: 44px; height: 3px; margin-bottom: 0; }
 
-#dashtodockContainer #dash .app-well-app-running-dot { background-color: white; }
+#dashtodockContainer #dash .app-well-app-running-dot { background-color: transparent; }
 
 #dashtodockContainer.running-dots .dash-item-container > StButton, #dashtodockContainer.dashtodock .dash-item-container > StButton { background-size: contain; }
 
 #dashtodockContainer.shrink .dash-item-container > StButton, #dashtodockContainer.dashtodock .dash-item-container > StButton { padding: 2px 4px !important; }
 
-#dashtodockContainer.right #dash .app-well-app { padding: 0; border: none; }
+#dashtodockContainer.right #dash .running1 { box-shadow: inset -3px 0 rgba(255, 255, 255, 0.6); }
+
+#dashtodockContainer.right #dash .running1:hover { box-shadow: inset -3px 0 rgba(255, 255, 255, 0.8); }
+
+#dashtodockContainer.right #dash .app-well-app { padding: 0px; border: 2px solid transparent; border-left: 0; border-right: 0; }
 
 #dashtodockContainer.right #dash .app-well-app .overview-icon { margin: 0; }
 
@@ -1088,7 +1096,7 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.right #dash .app-well-app.focused { box-shadow: inset -3px 0 #fb6f55; }
 
-#dashtodockContainer.right #dash .app-well-app:hover { box-shadow: inset -3px 0 rgba(255, 255, 255, 0.6); }
+#dashtodockContainer.right #dash .app-well-app:hover { box-shadow: inset -3px 0 rgba(255, 255, 255, 0.8); }
 
 #dashtodockContainer.right #dash .app-well-app:active .overview-icon, #dashtodockContainer.right #dash .app-well-app:checked .overview-icon, #dashtodockContainer.right #dash .app-well-app:focus .overview-icon, #dashtodockContainer.right #dash .app-well-app:selected .overview-icon { background: none; box-shadow: none; }
 
@@ -1100,25 +1108,29 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.extended { border: 0; border-radius: 0; }
 
-#dashtodockContainer.bottom #dash .app-well-app-running-dot { width: 44px; height: 2px; margin-bottom: 0; }
+#dashtodockContainer.bottom #dash .app-well-app-running-dot { width: 44px; height: 3px; margin-bottom: 0; }
 
-#dashtodockContainer #dash .app-well-app-running-dot { background-color: white; }
+#dashtodockContainer #dash .app-well-app-running-dot { background-color: transparent; }
 
 #dashtodockContainer.running-dots .dash-item-container > StButton, #dashtodockContainer.dashtodock .dash-item-container > StButton { background-size: contain; }
 
 #dashtodockContainer.shrink .dash-item-container > StButton, #dashtodockContainer.dashtodock .dash-item-container > StButton { padding: 2px 4px !important; }
 
-#dashtodockContainer.bottom #dash .app-well-app { padding: 0; border: none; }
+#dashtodockContainer.bottom #dash .running1 { box-shadow: inset 0 -3px rgba(255, 255, 255, 0.6); }
+
+#dashtodockContainer.bottom #dash .running1:hover { box-shadow: inset 0 -3px rgba(255, 255, 255, 0.8); }
+
+#dashtodockContainer.bottom #dash .app-well-app { padding: 0px; border: 2px solid transparent; border-top: 0; border-bottom: 0; }
 
 #dashtodockContainer.bottom #dash .app-well-app .overview-icon { margin: 0; }
 
-#dashtodockContainer.bottom #dash .app-well-app.focused .overview-icon { background-gradient-direction: horizontal; background-gradient-start: transparent; background-gradient-end: transparent; background: none; }
+#dashtodockContainer.bottom #dash .app-well-app.focused .overview-icon { background-gradient-direction: vertical; background-gradient-start: transparent; background-gradient-end: transparent; background: none; }
 
 #dashtodockContainer.bottom #dash .app-well-app:hover .overview-icon { background: none; }
 
 #dashtodockContainer.bottom #dash .app-well-app.focused { box-shadow: inset 0 -3px #fb6f55; }
 
-#dashtodockContainer.bottom #dash .app-well-app:hover { box-shadow: inset 0 -3px rgba(255, 255, 255, 0.6); }
+#dashtodockContainer.bottom #dash .app-well-app:hover { box-shadow: inset 0 -3px rgba(255, 255, 255, 0.8); }
 
 #dashtodockContainer.bottom #dash .app-well-app:active .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:checked .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:focus .overview-icon, #dashtodockContainer.bottom #dash .app-well-app:selected .overview-icon { background: none; box-shadow: none; }
 
@@ -1130,25 +1142,29 @@ StScrollBar StButton#vhandle:active, StScrollBar StButton#hhandle:active { backg
 
 #dashtodockContainer.extended { border: 0; border-radius: 0; }
 
-#dashtodockContainer.bottom #dash .app-well-app-running-dot { width: 44px; height: 2px; margin-bottom: 0; }
+#dashtodockContainer.bottom #dash .app-well-app-running-dot { width: 44px; height: 3px; margin-bottom: 0; }
 
-#dashtodockContainer #dash .app-well-app-running-dot { background-color: white; }
+#dashtodockContainer #dash .app-well-app-running-dot { background-color: transparent; }
 
 #dashtodockContainer.running-dots .dash-item-container > StButton, #dashtodockContainer.dashtodock .dash-item-container > StButton { background-size: contain; }
 
 #dashtodockContainer.shrink .dash-item-container > StButton, #dashtodockContainer.dashtodock .dash-item-container > StButton { padding: 2px 4px !important; }
 
-#dashtodockContainer.top #dash .app-well-app { padding: 0; border: none; }
+#dashtodockContainer.top #dash .running1 { box-shadow: inset 0 3px rgba(255, 255, 255, 0.6); }
+
+#dashtodockContainer.top #dash .running1:hover { box-shadow: inset 0 3px rgba(255, 255, 255, 0.8); }
+
+#dashtodockContainer.top #dash .app-well-app { padding: 0px; border: 2px solid transparent; border-top: 0; border-bottom: 0; }
 
 #dashtodockContainer.top #dash .app-well-app .overview-icon { margin: 0; }
 
-#dashtodockContainer.top #dash .app-well-app.focused .overview-icon { background-gradient-direction: horizontal; background-gradient-start: transparent; background-gradient-end: transparent; background: none; }
+#dashtodockContainer.top #dash .app-well-app.focused .overview-icon { background-gradient-direction: vertical; background-gradient-start: transparent; background-gradient-end: transparent; background: none; }
 
 #dashtodockContainer.top #dash .app-well-app:hover .overview-icon { background: none; }
 
 #dashtodockContainer.top #dash .app-well-app.focused { box-shadow: inset 0 3px #fb6f55; }
 
-#dashtodockContainer.top #dash .app-well-app:hover { box-shadow: inset 0 3px rgba(255, 255, 255, 0.6); }
+#dashtodockContainer.top #dash .app-well-app:hover { box-shadow: inset 0 3px rgba(255, 255, 255, 0.8); }
 
 #dashtodockContainer.top #dash .app-well-app:active .overview-icon, #dashtodockContainer.top #dash .app-well-app:checked .overview-icon, #dashtodockContainer.top #dash .app-well-app:focus .overview-icon, #dashtodockContainer.top #dash .app-well-app:selected .overview-icon { background: none; box-shadow: none; }
 
