--- a/gnome-shell/gnome-shell-sass/_extensions.scss
+++ b/gnome-shell/gnome-shell-sass/_extensions.scss
@@ -41,28 +41,22 @@ $panel_color: transparentize(black, 0.5);
 #panel.dashtopanelMainPanel {
   @extend %panel_bg;
 
-  &.dashtopanelBottom {
-    box-shadow: $_panel_bottom;
+  @each $o in (Bottom), (Top) {
+    &.dashtopanel#{$o} {
+      @if $o==Bottom { box-shadow: $_panel_bottom; }
+      @else if $o==Top { box-shadow: $_panel_top; }
 
-    .app-well-app:hover .overview-icon {
-      @extend %panel_fix;
-      box-shadow: $_hover_effect_bottom;
-    }
-    //.app-well-app.focused .overview-icon {} // Let the extension settings handle this one
-  }
-
-  &.dashtopanelTop {
-    box-shadow: $_panel_top;
-
-    .app-well-app:hover .overview-icon {
-      @extend %panel_fix;
-      box-shadow: $_hover_effect_top;
+      .app-well-app:hover .overview-icon {
+        @extend %panel_fix;
+        @if $o==Bottom { box-shadow: $_hover_effect_bottom; }
+        @else if $o==Top { box-shadow: $_hover_effect_top; }
+      }
     }
   }
 
   .panel-button {
     &:hover { background-color: transparentize(white,0.9); }
-    &:active, &:overview, &:focus, &:checked { background-color: $selected_bg_color; }
+    &:active, &:overview, &:focus { background-color: $selected_bg_color; }
     text-shadow: black 0 1px 1px;
   }
 
@@ -91,7 +85,7 @@ $panel_color: transparentize(black, 0.5);
   // clock and system menu area
   & > #panelRight {
     box-shadow: inset 1px 0 $panel_color;
-    background-color: $panel_color;
+    //background-color: $panel_color;
     .panel-button:hover { box-shadow: none; }
   }
   
@@ -203,7 +197,6 @@ $panel_color: transparentize(black, 0.5);
       }
 
       &:active .overview-icon,
-      &:checked .overview-icon,
       &:focus .overview-icon,
       &:selected .overview-icon {
         @extend %panel_fix;
